# serve_embed

./: Cargo.toml  LICENSE  README.md
examples/: hello.rs
src/: lib.rs  tests.rs
test-fixtures/www1/: 404.html  index.css  index.html
